--- a/contact.html
+++ b/contact.html
@@ -83,21 +83,29 @@
     <div class="container">
         <h1>Contact Us</h1>
         <form id="contact-form" action="https://api.web3forms.com/submit" method="POST">
-            <input type="hidden" name="access_key" value="fa248f68-c637-43e7-9987-2110075a4045">
+            <!-- Web3Forms access key -->
+            <input type="hidden" name="access_key" value="74c7dd03-c6eb-4d15-9753-607d2ccec986">
+            <input type="hidden" name="subject" value="New Submission from Contact Form">
+            <input type="hidden" name="from_name" value="Your Website Name">
+            <input type="hidden" name="redirect" value="https://web3forms.com/success">
+            
             <label for="name">First Name:</label>
-            <input type="text" id="name" name="fname" placeholder="Your first name.."><br><br>
+            <input type="text" id="name" name="fname" placeholder="Your first name.." required>
 
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+            <label for="lname">Last Name:</label>
+            <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Your email address.."><br><br>
+            <input type="email" id="email" name="email" placeholder="Your email address.." required>
 
             <label for="message">Message:</label>
-            <textarea id="message" name="message"></textarea><br><br>
+            <textarea id="message" name="message" placeholder="Your message.." required></textarea>
+
             <input type="submit" value="Send">
         </form>
         <div id="response"></div>
+
+        <!-- Rating section -->
         <div class="rating-container">
             <h2>How would you rate our services?</h2>
             <div id="rating-emojis">
@@ -111,6 +119,9 @@
         </div>
     </div>
 
+    <!-- hCaptcha -->
+    <script src="https://web3forms.com/client/script.js" async defer></script>
+
     <script>
         const form = document.getElementById('contact-form');
         const responseDiv = document.getElementById('response');
@@ -120,20 +131,16 @@
         form.addEventListener('submit', (e) => {
             e.preventDefault();
             const name = document.getElementById('name').value;
-            const email = document.getElementById('email').value;
-            const message = document.getElementById('message').value;
-
-            // For demonstration purposes, we'll just display the message
             responseDiv.innerHTML = `Thank you, ${name}! Your message has been sent.`;
         });
 
         ratingEmojis.forEach((emoji) => {
-    emoji.addEventListener('click', () => {
-        // Remove the selected class from all emojis
-        ratingEmojis.forEach((e) => e.classList.remove('selected'));
-        // Add the selected class to the clicked emoji
-        emoji.classList.add('selected');
-        // Display the rating message
-        ratingMessage.innerHTML = `You rated us ${emoji.dataset.rating} out of 5!`;
-    });
-});
+            emoji.addEventListener('click', () => {
+                ratingEmojis.forEach((e) => e.classList.remove('selected'));
+                emoji.classList.add('selected');
+                ratingMessage.innerHTML = `You rated us ${emoji.dataset.rating} out of 5!`;
+            });
+        });
+    </script>
+</body>
+</html>
