--- a/aboutus.html
+++ b/aboutus.html
@@ -88,17 +88,17 @@
         <div class="card">
             <h2 class="card-title">Meet Our Team</h2>
             <p class="card-text">Our team is made up of experienced basketball players and coaches who have a deep understanding of the game. We are committed to providing accurate and up-to-date information, as well as expert analysis and commentary.</p>
-            <button class="card-button">Learn More</button>
+            <button class="card-button" ><a href="ourteam.html">Learn More</a></button>
         </div>
         <div class="card">
             <h2 class="card-title">Our History</h2>
             <p class="card-text">Our website was founded in 2020 with the goal of providing a one-stop shop for all your basketball needs. We have since grown to become one of the leading basketball websites in the world.</p>
-            <button class="card-button">Learn More</button>
+            <button class="card-button"><a href="ourhistory.html">Learn More</a></button>
         </div>
         <div class="card">
             <h2 class="card-title">Our Partners</h2>
             <p class="card-text">We are proud to partner with some of the leading basketball organizations in the world. Our partners include the NBA, the WNBA, and the NCAA.</p>
-            <button class="card-button">Learn More</button>
+            <button class="card-button"><a href="ourpartners.html">Learn More</a></button>
         </div>
     </div>
 
