--- a/contact.html
+++ b/contact.html
@@ -4,80 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <style>
-        body {
-            background-color: #333;
-            color: #fff;
-            font-family: Arial, sans-serif;
-        }
-
-        .container {
-            max-width: 500px;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: #444;
-            border: 1px solid #555;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        input[type="text"], input[type="email"], textarea {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #666;
-            border-radius: 5px;
-        }
-
-        input[type="submit"] {
-            background-color: #666;
-            color: #fff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #777;
-        }
-
-        #response {
-            margin-top: 20px;
-            padding: 10px;
-            border: 1px solid #666;
-            border-radius: 5px;
-            background-color: #444;
-            color: #fff;
-        }
-
-        /* Rating container */
-        .rating-container {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        /* Rating emojis */
-        .rating-emojis {
-            font-size: 24px;
-            cursor: pointer;
-        }
-
-        /* Selected rating emoji */
-        .selected {
-            color: #ff9900;
-        }
-    </style>
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <div class="container">
@@ -121,26 +48,7 @@
 
     <!-- hCaptcha -->
     <script src="https://web3forms.com/client/script.js" async defer></script>
-
-    <script>
-        const form = document.getElementById('contact-form');
-        const responseDiv = document.getElementById('response');
-        const ratingEmojis = document.querySelectorAll('.rating-emojis');
-        const ratingMessage = document.getElementById('rating-message');
-
-        form.addEventListener('submit', (e) => {
-            e.preventDefault();
-            const name = document.getElementById('name').value;
-            responseDiv.innerHTML = `Thank you, ${name}! Your message has been sent.`;
-        });
-
-        ratingEmojis.forEach((emoji) => {
-            emoji.addEventListener('click', () => {
-                ratingEmojis.forEach((e) => e.classList.remove('selected'));
-                emoji.classList.add('selected');
-                ratingMessage.innerHTML = `You rated us ${emoji.dataset.rating} out of 5!`;
-            });
-        });
-    </script>
+    <!-- Link to external JS file -->
+    <script src="contact.js"></script>
 </body>
 </html>
