--- a/ourteam.html
+++ b/ourteam.html
@@ -3,9 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Cougars Basketball - Our History">
     <title>Our Team.</title>
+
+    <!-- Include external Bootstrap 4 CSS for responsiveness and styles -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="history.css">
+    
 </head>
 <body>
-    
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg" id="navbar">
+        <a class="navbar-brand" href="#">
+            <div class="logo">
+                <img src="C:\Users\HP\Desktop\basketball project\images\courgers.jpeg" alt="Cougars Logo">
+                <span class="company-name">Cougars</span>
+            </div>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutus.html">About</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="ourhistory.html">Our History</a>
+                        <a class="dropdown-item" href="ourteam.html">Our Team</a>
+                        <a class="dropdown-item" href="ourpartners.html">Our Partners</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="contact.html">Contact</a>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0" onsubmit="return performSearch()">
+                <input class="form-control mr-sm-2" id="searchInput" type="search" placeholder="Search" aria-label="Search" required>
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>            
+            <button id="dark-mode-toggle" class="btn ml-auto">Dark Mode</button>
+        </div>
+    </nav>
+
+    <!-- JavaScript for Dark Mode Toggle -->
+    <script>
+        const toggleButton = document.getElementById('dark-mode-toggle');
+        const body = document.body;
+
+        toggleButton.addEventListener('click', () => {
+            body.classList.toggle('dark-mode');
+            if (body.classList.contains('dark-mode')) {
+                toggleButton.textContent = 'Light Mode';
+            } else {
+                toggleButton.textContent = 'Dark Mode';
+            }
+        });
+    </script>
+
+    <!-- JavaScript for Search Functionality -->
+    <script>
+        // Define a simple search mapping between terms and pages
+        const pages = {
+            "home": "index.html",
+            "about": "aboutus.html",
+            "history": "ourhistory.html",
+            "our history": "ourhistory.html",
+            "team": "ourteam.html",
+            "partners": "ourpartners.html",
+            "contact": "contact.html"
+        };
+
+        function performSearch() {
+            const query = document.getElementById('searchInput').value.toLowerCase(); // Get user input
+            const page = pages[query]; // Match the input with the page map
+
+            if (page) {
+                window.location.href = page; // Redirect to the matched page
+            } else {
+                alert("Page not found! Please try searching for 'home', 'about', 'history', 'team', 'partners', or 'contact'.");
+            }
+
+            return false; // Prevent form submission (since we're handling it with JS)
+        }
+    </script>
+
+    <!-- Include external Bootstrap and jQuery JS for responsive behavior -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
